...
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_total_counters">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recicler_view_counter"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="16dp"
                            android:background="@color/transparent"
                            android:backgroundTint="@color/transparent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>


                <Button
                    android:id="@+id/button_add_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button"
                    android:drawableStart="@drawable/ic_plus"
                    android:drawablePadding="8dp"
                    android:padding="16dp"
...
