...
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal_1"
            android:layout_marginStart="@dimen/margin_normal_3"
            android:layout_marginEnd="@dimen/margin_normal_3"
            android:text="@string/welcome_description"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/buttonStart"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitle"
            app:layout_constraintVertical_bias="0.0" />

        <Button
...
