...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/image_view_plus_counter"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="5" />

                <ImageView
                    android:id="@+id/image_view_plus_counter"
                    android:layout_width="wrap_content"
...
