...
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/image_view_close_create_counter"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/text_view_save_counter"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/save"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/orange"
...
            style="@style/style_hint_orange_text_input_layout"
            android:layout_marginTop="16dp"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/constraint_layout_toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_create_counter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/counter_name_hint"
                android:theme="@style/MyEditText"/>

            <requestFocus/>
...
